# divine

./: CMakeLists.txt  README.md  makefile
src/: main.cpp
src/include/: constants.h  divine.h  helper.h  size_converter.h  transfer.h  ui.h
